--- a/www/index.css
+++ b/www/index.css
@@ -199,7 +199,7 @@
     text-align: center;
     font-weight: bold; 
     border: 1px solid #666;
-    background-color: white;
+    background-color: #60ADD9;
 }
 .icon__label--red {
     background-color: rgba(222, 27, 27, 0.7);
