--- a/www/index.css
+++ b/www/index.css
@@ -5,21 +5,21 @@
 */
 
 .main {
-    height: calc(100% - 158px); 
+    height: calc(100% - 162px); 
     margin: 0; 
     padding: 0;
 }
 
 .filter {
     width: 100%;
-    height: 58px;	
+    height: 68px;	
     background-color: #F5F5F5;
     border-bottom: 1px solid #D4D4D4;
 }
 
 .header {
     position: relative;
-    height: 100px;
+    height: 94px;
     width: 100%;
     margin: 0; 
     box-shadow: 0 1px 1px 0 rgba(183,183,183,0.5);
@@ -27,7 +27,7 @@
 
 .header__image {
     position: absolute;
-    top: -10px;
+    top: -21px;
     left: 35px;
     height: 154px;	
     width: 158px;	
@@ -35,7 +35,7 @@
     background-color: #FFFFFF;	
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.18);
     background-image: url("images/logo-eac.jpg");
-    background-position: center;
+    background-position: center 90%;;
     background-size: 95%;
     background-repeat: no-repeat;
     z-index: 999;
@@ -68,7 +68,7 @@
     background-repeat: no-repeat !important;
     background-position: center !important;
     height: 100%;
-    width: 100px;
+    width: 94px;
     float: right;
 }
 
