--- a/www/index.css
+++ b/www/index.css
@@ -5,16 +5,77 @@
 */
 
 .main {
-    height: calc(100% - 162px); 
+    height: calc(100% - 160px); 
     margin: 0; 
     padding: 0;
 }
 
-.filter {
+.filters {
     width: 100%;
-    height: 68px;	
+    min-height: 68px;	
     background-color: #F5F5F5;
     border-bottom: 1px solid #D4D4D4;
+    padding: 12px 30px 2px 10px;
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+.filters__filter {
+    float: left;
+    margin: 10px;
+    margin-bottom: 15px;
+}
+
+.filters__filter:first-of-type {
+    margin-left: 220px;
+}
+
+.filters__filter label {
+    position: relative;
+	height: 36px;
+	border-radius: 5px;
+    background-color: rgb(160, 153, 153);
+	font-family: Nunito;
+	font-size: 16px;
+	font-weight: bold;
+	line-height: 22px;
+    text-align: center;
+    padding: 8px 15px 8px 42px;
+    color: white;
+}
+
+.filters__filter label::before {
+    content: "";
+    background-image: url(images/icons/unchecked-checkbox-50.png);
+    background-size: 100%;
+    height: 22px;
+    width: 22px;
+    display: inline-block;
+    margin: 0px;
+    position: absolute;
+    left: 10px;
+}
+
+.filters__links {
+    height: 36px;
+    padding: 10px;
+    margin-left: 10px;
+    float: left;
+}
+
+
+.filters__filter input[type="checkbox"] {
+    display: none; 
+}
+         
+.filters__filter input[type="checkbox"]:checked + label {
+    background-color: #FFFFFF;
+	color: #0081CB;
+}
+
+         
+.filters__filter input[type="checkbox"]:checked + label::before {
+    background-image: url("images/icons/tick-box-50-blue.png");
 }
 
 .header {
@@ -45,6 +106,11 @@
     font-size: 18px;
 
 }
+
+.header__search__input:focus {
+    outline: none;
+}
+
 .header__search__button {
     position: relative;
     display: block;
@@ -160,6 +226,10 @@
     cursor: pointer;
 }
 
+.galery__card--selected {
+    background-color: rgb(212, 212, 212);
+}
+
 .galery__card__image {
     position: absolute;
     display: inline-block;
@@ -191,7 +261,7 @@
     right: 6px;
     width: 22px;
     height: 22px;
-    background-image: url("images/icons/add-to-favorites-50.png");
+    background-image: url("images/icons/star-50.png");
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -277,15 +347,19 @@
 */
 .icon__label {
     border-width: 3px;
-    border-radius: 50%;
     text-align: center;
     font-weight: bold; 
     color: white;
     font-size: 32px;
     font-weight: bold;
-    background-color: white;
     box-sizing: border-box;
 }
+
+.icon__label--circle {
+    border-radius: 50%;
+    background-color: white;
+}
+
 .icon__label--selected-college {
     background-color: #53205D;
     border: 5px solid #53205D;
@@ -302,10 +376,8 @@
     background-image: url("images/pin-culture.png");
     background-position: center;
     background-size: 100%;
-    background-color: initial;
     background-repeat: no-repeat;
     box-sizing: content-box;
-    border-radius: initial;
 }
 
 .icon__label--college:hover {
@@ -326,6 +398,10 @@
     font-size: 14px;
 }
 
+
+.map__popup {
+    border-radius: 4px !important;
+}
 .map__popup__button {
     border-radius: 100px;	
     background-color: #0081CB;	
@@ -337,4 +413,12 @@
     font-weight: 800;
     border: none;
     font-size: 11px;
+}
+
+.map__popup__title {
+    font-family: 'Nunito', sans-serif;
+    font-size: 16px;	
+    font-weight: bold;	
+    line-height: 19px;	
+    color: #0081CB;
 }
